--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,6 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "polars>=1.34.0",
+    "pyarrow>=21.0.0",
     "yfinance>=0.2.66",
 ]
