--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,5 +7,6 @@ requires-python = ">=3.13"
 dependencies = [
     "polars>=1.34.0",
     "pyarrow>=21.0.0",
+    "pyxirr>=0.10.7",
     "yfinance>=0.2.66",
 ]
